--- a/github-repos-cards.css
+++ b/github-repos-cards.css
@@ -3,18 +3,70 @@
 }
 
 .card {
-  margin: 0 10px 20px 10px;
+  margin: 0 5px 10px 5px;
   text-align: start;
   background-color: #fff;
-  width: 300px;
-  min-height: 200px;
+  max-width: 350px;
+  min-height: 100px;
 }
 
-.head {
+.repo-head {
   position: relative;
   border-bottom: 1px solid #ddd;
-  border-radius: 5px 5px 0 0;
-  background: #fcfcfc;
-  background: -moz-linear-gradient(#fcfcfc, #ebebeb);
-  background: -webkit-linear-gradient(#fcfcfc, #ebebeb);
+  background: #F5F5F5;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.repo-body {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.repo-desc {
+  margin-bottom: 5px;
+  border-bottom: 1px solid #ddd;
+
+}
+
+.repo-commit-detail {
+}
+
+.text-title {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.text-subhead {
+  font-size: 16px;
+  font-weight: 400;
+}
+
+paper-icon-button {
+  color: black;
+}
+
+.repo-stats {
+  font-size: 14px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  border: 1px solid #ddd;
+  background-color: #fff;
+  margin: 5px 0 5px 0;
+}
+
+core-item.small {
+  padding: 3px;
+  min-height: 20px; 
+}
+
+core-item.small /deep/ #icon {
+  margin: 0;
+  height: 14px;
+  width: 14px;
+}
+
+core-item.first-icon {
+  border-right: 1px solid #ddd;
 }
