--- a/github-repos-cards.css
+++ b/github-repos-cards.css
@@ -2,6 +2,10 @@
   display: block;
 }
 
+a:link, a:visited {
+  text-decoration: none;
+}
+
 .card {
   margin: 0 5px 10px 5px;
   text-align: start;
